# labJ

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  README.md  SETUP.md  TODO  config.py  env_config.py  labJ.code-workspace  main.py  main_stt.py  pyproject.toml  pytest.ini  requirements.txt  run.command  run_docker.py
.github/workflows/: tests.yml
agents/: controller.py  db.py  models.py
agents/nlp/: agent.py  memory.py  parser.py
archive/: Dockerfile.frontend  docker-compose.yml  run.ps1
audio/: __init__.py  audio_utils.py  mic_stream.py
data/: journal.sqlite
labj.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nlp/: __init__.py  memory.py
storage/: __init__.py  read_repository.py  sqlite_repository.py
stt/: __init__.py  base.py  config.py  scale_version_transcriber.py  transcriber.py  trigger.py
stt/models/: .gitkeep
tests/: test_parser.py  test_storage.py  test_stt.py  test_trigger.py
ui/: app.py  package-lock 2.json  package-lock.json  package.json
ui/src/: App.tsx  index.css  types.ts
ui/src/api/: client.ts  commands.ts  sessions.ts
ui/src/components/console/: CommandConsole.tsx
ui/src/components/layout/: Layout.tsx  LeftSidebar.tsx  RightPanel.tsx
ui/src/components/notebook/: NotebookView.tsx  SessionHeader.tsx  TiptapEditor.tsx
utilities/: __init__.py  chart_generator.py
