[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labj"
version = "0.1.0"
description = "Voice-activated lab assistant (FastAPI + STT + NLP + visualization)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "LabJ Team" }]
dependencies = [
  "sounddevice>=0.4.6",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "faster-whisper>=0.10.0",
  "openai>=1.0.0",
  "pandas>=2.0.0",
  "sqlalchemy>=2.0.0",
  "matplotlib>=3.7.0",
  "plotly>=5.14.0",
  "seaborn>=0.12.0",
  "streamlit>=1.28.0",
  "streamlit-autorefresh>=0.1.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "pre-commit>=4.5.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["*"]
